# Scripts to plot task graphs
EXTRA_DIST = task_plots/plot_tasks.py task_plots/analyse_tasks.py \
	     task_plots/process_plot_tasks_MPI task_plots/process_plot_tasks

# Scripts to plot threadpool 'task' graphs
EXTRA_DIST += task_plots/analyse_threadpool_tasks.py \
              task_plots/plot_threadpool.py \
              task_plots/process_plot_threadpool

# Script for scaling plot
EXTRA_DIST += plot_scaling_results.py \
              plot_scaling_results_breakdown.py

# Script for gravity accuracy
EXTRA_DIST += plot_gravity_checks.py

# Combine ICs.
EXTRA_DIST += combine_ics.py
