# Scripts to plot task graphs
EXTRA_DIST = task_plots/plot_tasks.py task_plots/analyse_tasks.py \
	     task_plots/process_plot_tasks_MPI task_plots/process_plot_tasks

# Scripts to plot threadpool 'task' graphs
EXTRA_DIST += task_plots/analyse_threadpool_tasks.py \
              task_plots/plot_threadpool.py \
              task_plots/process_plot_threadpool

# Script for scaling plot
EXTRA_DIST += plot_scaling_results.py \
              plot_scaling_results_breakdown.py

# Script for gravity accuracy
EXTRA_DIST += plot_gravity_checks.py

# Combine ICs.
EXTRA_DIST += combine_ics.py \
              parallel_replicate_ICs.py

# Scripts to analyse the raw runtime
EXTRA_DIST += analyse_runtime.py

# Python plot style sheets
EXTRA_DIST += stylesheets/mnras.mplstyle \
	      stylesheets/README

# Task dependencies plots
EXTRA_DIST += plot_task_dependencies.py \
              plot_task_level.py

# Cell hierarchies
EXTRA_DIST += make_cell_hierarchy.sh \
              data/cell_hierarchy.html

# Cell dumps
EXTRA_DIST += analyse_dump_cells.py \
              process_cells \
              process_cells_helper

# Checking scripts
EXTRA_DIST += check_interactions.sh \
	      check_ngbs.py \
              check_mpireports.py
